<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">超级小辅</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    
    <string name="tab_schedule">"课程表"</string>
    <string name="tab_found">"发现"</string>
    <string name="tab_me">"我"</string>
    
    <string name="title_schedule">"课程表"</string>
    <string name="title_found">"发现"</string>
    <string name="title_me">"我"</string>
    
    <string name="back">"返回"</string>
    <string name="attendance">"考勤"</string>
    <string name="help">"帮助"</string>
    <string name="exit">"退出"</string>
    <string name="add">"+"</string>

    <string name="fragment_home_text">"这是首页"</string>
    <string name="fragment_search_text">"这是搜索"</string>
    <string name="fragment_settings_text">"这是设置"</string>
    <string name="Monday">星期一</string>
    <string name="Tuesday">星期二</string>
    <string name="Wednesday">星期三</string>
    <string name="Thursday">星期四</string>
    <string name="Friday">星期五</string>

</resources>
