<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/fragment_schedule"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	>
	<com.sise.view.TitleView
		android:id="@+id/title"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" />
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TextView
			android:layout_weight="1"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:text="" />
		<TextView
			android:layout_weight="1"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:text="@string/Monday" />
		<TextView
			android:layout_weight="1"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:text="@string/Tuesday" />
		<TextView
			android:layout_weight="1"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:text="@string/Wednesday" />
		<TextView
			android:layout_weight="1"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:text="@string/Thursday" />
		<TextView
			android:layout_weight="1"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:text="@string/Friday" />
	</LinearLayout>
</LinearLayout>